# socket-flow

./: .gitignore  CONFIG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  TLS.md  autobahn.md  todo.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yaml  ci.yaml
autobahn/: expected-results-client.json  expected-results-server.json  expected-results.json  fuzzingclient.json  fuzzingserver.json
autobahn/client/: index.html  index.json  socket_flow_case_10_1_1.html  socket_flow_case_10_1_1.json  socket_flow_case_12_1_1.html  socket_flow_case_12_1_1.json  socket_flow_case_12_1_10.html  socket_flow_case_12_1_10.json  socket_flow_case_12_1_11.html  socket_flow_case_12_1_11.json  socket_flow_case_12_1_12.html  socket_flow_case_12_1_12.json  socket_flow_case_12_1_13.html  socket_flow_case_12_1_13.json  socket_flow_case_12_1_14.html  socket_flow_case_12_1_14.json  socket_flow_case_12_1_15.html  socket_flow_case_12_1_15.json  socket_flow_case_12_1_16.html  socket_flow_case_12_1_16.json  socket_flow_case_12_1_17.html  socket_flow_case_12_1_17.json  socket_flow_case_12_1_18.html  socket_flow_case_12_1_18.json  socket_flow_case_12_1_2.html  socket_flow_case_12_1_2.json  socket_flow_case_12_1_3.html  socket_flow_case_12_1_3.json  socket_flow_case_12_1_4.html  socket_flow_case_12_1_4.json  socket_flow_case_12_1_5.html  socket_flow_case_12_1_5.json  socket_flow_case_12_1_6.html  socket_flow_case_12_1_6.json  socket_flow_case_12_1_7.html  socket_flow_case_12_1_7.json  socket_flow_case_12_1_8.html  socket_flow_case_12_1_8.json  socket_flow_case_12_1_9.html  socket_flow_case_12_1_9.json  (+996 more)
autobahn/server/: index.html  index.json  simple_websocket_case_10_1_1.html  simple_websocket_case_10_1_1.json  simple_websocket_case_12_1_1.html  simple_websocket_case_12_1_1.json  simple_websocket_case_12_1_10.html  simple_websocket_case_12_1_10.json  simple_websocket_case_12_1_11.html  simple_websocket_case_12_1_11.json  simple_websocket_case_12_1_12.html  simple_websocket_case_12_1_12.json  simple_websocket_case_12_1_13.html  simple_websocket_case_12_1_13.json  simple_websocket_case_12_1_14.html  simple_websocket_case_12_1_14.json  simple_websocket_case_12_1_15.html  simple_websocket_case_12_1_15.json  simple_websocket_case_12_1_16.html  simple_websocket_case_12_1_16.json  simple_websocket_case_12_1_17.html  simple_websocket_case_12_1_17.json  simple_websocket_case_12_1_18.html  simple_websocket_case_12_1_18.json  simple_websocket_case_12_1_2.html  simple_websocket_case_12_1_2.json  simple_websocket_case_12_1_3.html  simple_websocket_case_12_1_3.json  simple_websocket_case_12_1_4.html  simple_websocket_case_12_1_4.json  simple_websocket_case_12_1_5.html  simple_websocket_case_12_1_5.json  simple_websocket_case_12_1_6.html  simple_websocket_case_12_1_6.json  simple_websocket_case_12_1_7.html  simple_websocket_case_12_1_7.json  simple_websocket_case_12_1_8.html  simple_websocket_case_12_1_8.json  simple_websocket_case_12_1_9.html  simple_websocket_case_12_1_9.json  (+996 more)
benchmarking/: load_generator.rs
benchmarking/k6/: k6.js  k6.md  socket-flow.yaml
examples/: autobahn_client.rs  autobahn_server.rs  client.rs  client_tls.rs  continue_client.rs  crypto_client.rs  custom_server.rs  echo_server.rs  echo_server_tls.rs  internal_server.rs  simple_server.rs  simple_server_tls.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
scripts/: autobahn-client.sh  autobahn-server.sh
src/: compress.rs  compression.rs  config.rs  connection.rs  decoder.rs  encoder.rs  error.rs  event.rs  extensions.rs  frame.rs  handshake.rs  lib.rs  main.rs  message.rs  read.rs  request.rs  server.rs  split.rs  stream.rs  tests.rs  utils.rs  write.rs
workflows/: dev.yaml  go.yaml  prod.yaml  qa.yaml
