[package]
name = "socket-flow"
version = "0.4.0"
edition = "2021"
authors = ["Felipe Meriga <felipe.meriga@gmail.com>"]
description = "a simple WebSockets implementation, to be used in clients and servers"
readme = "README.md"
categories = ["web-programming::websocket", "network-programming", "asynchronous", "concurrency"]
keywords = ["websocket", "io", "web"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/my_crate"
homepage = "https://github.com/felipemeriga/socket-flow"
documentation = "https://github.com/felipemeriga/socket-flow"


[lib]
name = "socket_flow"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
sha1 = "0.11.0-pre.3"
bytes = "1.6.0"
base64 = "0.22.1"
thiserror = "1.0.61"
log = "0.4.22"
env_logger = "0.11.4"
rand = "0.9.0-alpha.1"
time = "0.3.36"

[[example]]
name = "internal_server"

[[example]]
name = "client"

[[example]]
name = "continue_client"