[package]
name = "socket-flow"
version = "0.8.1"
edition = "2021"
authors = ["Felipe Meriga <felipe.meriga@gmail.com>"]
description = "a simple WebSockets implementation, to be used in clients and servers"
readme = "README.md"
categories = ["web-programming::websocket", "network-programming", "asynchronous", "concurrency"]
keywords = ["websocket", "io", "web"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/my_crate"
homepage = "https://github.com/felipemeriga/socket-flow"
documentation = "https://github.com/felipemeriga/socket-flow"

[lib]
name = "socket_flow"
path = "src/lib.rs"

[dependencies]
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
sha1 = "0.11.0-pre.3"
bytes = "1.6.0"
base64 = "0.22.1"
thiserror = "1.0.61"
log = "0.4.22"
env_logger = "0.11.4"
rand = "0.9.0-beta.0"
time = "0.3.36"
url = "2.5.2"
tokio-stream = "0.1.15"
uuid = { version = "1.10.0", features = ["v8"] }
flate2 = { version = "1.0.34", features = ["zlib"] }
tokio-rustls = "0.26.0"
rustls = "0.23.13"
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-pemfile = "2.2.0"
webpki-roots = "0.26.6"
serde = { version = "1.0.207", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.133"

[[example]]
name = "echo_server"

[[example]]
name = "echo_server_tls"

[[example]]
name = "client"

[[example]]
name = "client_tls"

[[example]]
name = "continue_client"

[[example]]
name = "autobahn_client"

[[example]]
name = "autobahn_server"

[[example]]
name = "simple_server"

[[example]]
name = "simple_server_tls"

[[example]]
name = "crypto_client"

[[bin]]
name = "load_generator"
path = "benchmarking/load_generator.rs"